# Swastyaops

./: .gitignore  README.md  SPEC.md  firebase.json  presentation.html
.firebase/: hosting.LmZpcmViYXNlXHN3YXN0aHlhb3BzLWRldlxob3N0aW5n.cache  hosting.ZnJvbnRlbmRcb3V0.cache
architecture/: event_catalog.md  pubsub_topics.yaml  service_catalog.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: main.py  registry.py  runtime.py
backend/app/agents/tools/: base.py
backend/app/core/: auth.py  config.py  context.py  errors.py  firestore.py  logging.py  pubsub.py
backend/app/models/: schemas.py
backend/app/routers/: attendance.py  facilities.py  footfall.py  inventory.py
backend/tests/contract/: test_topic_registry.py
backend/tests/integration/: test_agents_task_handler.py  test_attendance_router.py  test_facilities_router.py  test_footfall_router.py  test_inventory_router.py
backend/tests/unit/: test_agent_registry.py  test_auth.py  test_config.py  test_errors.py  test_firestore_core.py  test_inventory_math.py  test_logging.py  test_pubsub.py  test_tool_tenancy.py
docs/: 01_PRD.md  02_TRD.md  03_System_Architecture.md  04_Database_Schema.md  05_API_Specification.md  06_AI_Architecture.md  07_Agent_Design.md  08_App_Flow.md  09_UI_UX_Guidelines.md  10_Deployment_Guide.md  11_Implementation_Plan.md  12_Testing_Strategy.md  13_Security.md  14_Data_Pipeline.md  15_Presentation.md  16_Future_Roadmap.md
frontend/: README.md  firebase.json  package-lock.json  package.json  tsconfig.tsbuildinfo
infra/: cloudbuild.yaml  firestore.rules
mobile/: README.md
prompts/: README.md  bed_agent.md  disease_intelligence_agent.md  doctor_agent.md  executive_briefing_agent.md  forecast_agent.md  inventory_agent.md  laboratory_agent.md  notification_agent.md  planner_agent.md  recommendation_agent.md  (+1 more)
(+121 files in other folders)
