[project]
name = "swasthyaops-backend"
version = "0.1.0"
description = "SwasthyaOps AI backend services (svc-api, svc-ingestion, svc-agents, svc-forecast, svc-notify, svc-reports)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "google-cloud-firestore>=2.19",
    "google-cloud-pubsub>=2.23",
    "google-cloud-bigquery>=3.25",
    "google-cloud-storage>=2.18",
    "google-cloud-secret-manager>=2.20",
    "google-cloud-aiplatform[agent-engines]>=1.70",
    "google-cloud-speech>=2.27",
    "google-cloud-texttospeech>=2.17",
    "google-cloud-translate>=3.16",
    "firebase-admin>=6.5",
    "uuid7>=0.1",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-gcp-trace>=1.7",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.112",
    "ruff>=0.6",
    "mypy>=1.11",
    "schemathesis>=3.36",
]
reports = ["weasyprint>=62", "jinja2>=3.1"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# B008: `Depends(...)`-style factories in parameter defaults are the FastAPI idiom.
per-file-ignores = { "tests/*" = ["S101"], "app/routers/*" = ["B008"] }

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# These ship without type stubs or a py.typed marker.
module = [
    "uuid_extensions",
    "vertexai",
    "vertexai.*",
    "firebase_admin",
    "firebase_admin.*",
    "google.cloud.pubsub_v1",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
